--- a/index.html
+++ b/index.html
@@ -1,46 +1,54 @@
 <html>
 <head>
 <style>
-        html,
-        body {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-        }
-        canvas {
-            background: #000;
-            display: block;
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+html,
+/*body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}*/
+canvas {
+    background: #000;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+</style>
 </head>
 
 <body>
-<canvas id="canvas" width="500" height="500"></canvas>
+<canvas id="canvas" width = window.innerWidth height = window.innerHeight></canvas>
 <script>
-        var place = 0;
-     var line = 0;
-     var canvas = document.getElementById('canvas');
-     var ctx = canvas.getContext('2d');
-     var code = ["<script>", "var place = 0;", "var line = 0;", "var canvas = document.getElementById('canvas');"];
-     document.body.addEventListener('keydown', function(e) {
+
+var place = 0;
+var line = 0;
+var canvas = document.getElementById('canvas');
+var ctx = canvas.getContext('2d');
+canvas.style.width=canvas.width;//actual width of canvas
+canvas.style.height=canvas.height;//sets actual height of canvas and solves blurry text
+
+var code = ["<script>", "var place = 0;", "var line = 0;", "var canvas = document.getElementById('canvas');", "var canvas = document.getElementById('canvas');", "var canvas = document.getElementById('canvas');"];
+
+
+document.body.addEventListener('keydown', function(e) {
+        console.log("keypressed");
         //if your place is past your line then start the next line and restart place in the line
         if(place>code[line].length){
             line++;
             place = 0;
         }
-        ctx.font="20px Georgia";
+        ctx.font="20pt Courier New";
         ctx.fillStyle = 'green';
         //show the character at your place @ the x coordinate of the width of the line written so far @ the y coordinate of how many lines
-        ctx.fillText(code[line].charAt(place), ctx.measureText(code[line].substring(0,place+1)).width, ctx.measureText(code[line]).height);
+        //WORKING
+                 //ctx.fillText(code[line].charAt(place), ctx.measureText(code[line].substring(0,place+1)).width, line*20);
+
+            ctx.fillText(code[line].charAt(place), place*14, 24+line*20);
         place+=1;
     });
-    </script>
+</script>
 </body>
 </html>
