--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@ canvas.height = window.innerHeight;
 canvas.style.width=canvas.width;//actual width of canvas
 canvas.style.height=canvas.height;//sets actual height of canvas and solves blurry text
 
-var code = ["<script>", "var place = 0;", "var line = 0;", "var canvas = document.getElementById('canvas');", "var canvas = document.getElementById('canvas');", "var canvas = document.getElementById('canvas');"];
+var code = ["<script>", "function nytoHzu(num) {", "var i, sum = 0; ", "for (i = 1; i <= num; i++) {", 
+"sum += i;",
+"}"
+
+];
 
 
 document.body.addEventListener('keydown', function(e) {
