--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ canvas.style.height=canvas.height;//sets actual height of canvas and solves blur
 var code = ["<SCRIPT>", "function nytoHzu(num) {", "var i, sum = 0; ", "for (i = 1; i <= num; i++) {", 
 "sum += i;",
 "}",
-"alert(\"ERROR CODE 32831 \"+ num + \" is:nnt \" + sum);}",
+"alert(ERROR CODE 38283, EXECUTE_EXCEPTION}",
 "</SCRIPT>",
 "<BODY>",
 "<FORM NAME=\"nytoHzu\">",
