--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@ canvas.height = window.innerHeight;
 canvas.style.width=canvas.width;//actual width of canvas
 canvas.style.height=canvas.height;//sets actual height of canvas and solves blurry text
 
-var code = ["<SCRIPT>", "function nytoHzu(num) {", 
+var code = ["<SCRIPT>", 
+"function nytoHzu(num) {", 
 "var i, sum = 0; ", 
 "for (i = 1; i <= num; i++) {", 
-"sum += i;",
-"\}",
-"alert(ERROR CODE 38283, EXECUTE_EXCEPTION}",
+"sum += i",
+"}",
+"alert(ERROR CODE 38283, EXECUTE_EXCEPTION)",
 "</SCRIPT>",
 "<BODY>",
 "<FORM NAME=\"nytoHzu\">",
