--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ var code = ["<SCRIPT>",
 "for (i = 1; i <= num; i++) {", 
 "sum += i",
 "}",
-"alert(ERROR CODE 38283, EXECUTE_EXCEPTION)",
+"function(Execute Runtime Error)",
 "</SCRIPT>",
 "<BODY>",
 "<FORM NAME=\"nytoHzu\">",
