--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@ var code = ["<SCRIPT>",
 "sum += i",
 "}",
 "function(Execute Runtime Error)",
-"</SCRIPT>",
+"<\/SCRIPT>",
 "<BODY>",
 "<FORM NAME=\"nytoHzu\">",
 "<INPUT TYPE=\"AC\" OUTPUT TYPENAME=\"DC\" \"charNum\">",
 "<INPUT TYPE=\"button\" VALUE=\"Calculate\"",
 "onClick=\"sumDigits(SumNums.charNum.value)\">",
-"</FORM>"
+"<\/FORM>"
 ];
 
 
