--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ canvas {
 
 <body>
 <canvas id="canvas" width = window.innerWidth height = window.innerHeight></canvas>
+</body
 <script>
 
 var place = 0;
@@ -57,5 +58,4 @@ document.body.addEventListener('keydown', function(e) {
         place+=1;
     });
 </script>
-</body>
 </html>
