--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ canvas {
 
 <body>
 <canvas id="canvas" width = window.innerWidth height = window.innerHeight></canvas>
-</body
+</body>
 <script>
 
 var place = 0;
