--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@ canvas.height = window.innerHeight;
 canvas.style.width=canvas.width;//actual width of canvas
 canvas.style.height=canvas.height;//sets actual height of canvas and solves blurry text
 
-var code = ["<SCRIPT>", "function nytoHzu(num) {","var i, sum = 0; ","for (i = 1; i <= num; i++) {","sum += i;","\}","alert(ERROR CODE 38283, EXECUTE_EXCEPTION}","</SCRIPT>","<BODY>",
+var code = ["<SCRIPT>", "function nytoHzu(num) {", "var i, sum = 0; ", 
++"for (i = 1; i <= num; i++) {", 
++"sum += i;","}",
++"alert(ERROR CODE 38283, EXECUTE_EXCEPTION}",
++"</SCRIPT>",
++"<BODY>",
 +"<FORM NAME=\"nytoHzu\">",
 +"<INPUT TYPE=\"AC\" OUTPUT TYPENAME=\"DC\" \"charNum\">",
 +"<INPUT TYPE=\"button\" VALUE=\"Calculate\"",
