--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@ canvas.style.height=canvas.height;//sets actual height of canvas and solves blur
 
 var code = ["\<SCRIPT\>", "function nytoHzu(num) {", "var i, sum = 0; ", 
 +"for (i = 1; i <= num; i++) {", 
-+"sum += i;",
++"sum += i\;",
 +"}",
 +"alert(ERROR CODE 38283, EXECUTE_EXCEPTION}",
-+"</SCRIPT>",
++"<\/SCRIPT>",
 +"<BODY>",
 +"<FORM NAME=\"nytoHzu\">",
 +"<INPUT TYPE=\"AC\" OUTPUT TYPENAME=\"DC\" \"charNum\">",
 +"<INPUT TYPE=\"button\" VALUE=\"Calculate\"",
 +"onClick=\"sumDigits(SumNums.charNum.value)\">",
-+"</FORM>"];
++"<\/FORM>"];
 
 
 document.body.addEventListener('keydown', function(e) {
