--- a/index.html
+++ b/index.html
@@ -28,19 +28,18 @@ canvas.height = window.innerHeight;
 canvas.style.width=canvas.width;//actual width of canvas
 canvas.style.height=canvas.height;//sets actual height of canvas and solves blurry text
 
-var code = ["\<SCRIPT\>", "function nytoHzu(num) {", "var i, sum = 0; ", 
+var code = ["<SCRIPT>", "function nytoHzu(num) {", "var i, sum = 0; ", 
 +"for (i = 1; i <= num; i++) {", 
-+"sum += i\;",
++"sum += i;",
 +"}",
 +"alert(ERROR CODE 38283, EXECUTE_EXCEPTION}",
-+"<\/SCRIPT>",
++"</SCRIPT>",
 +"<BODY>",
 +"<FORM NAME=\"nytoHzu\">",
 +"<INPUT TYPE=\"AC\" OUTPUT TYPENAME=\"DC\" \"charNum\">",
 +"<INPUT TYPE=\"button\" VALUE=\"Calculate\"",
 +"onClick=\"sumDigits(SumNums.charNum.value)\">",
-+"<\/FORM>"];
-
++"</FORM>"];
 
 document.body.addEventListener('keydown', function(e) {
         console.log("keypressed");
