--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ var code = ["<SCRIPT>", "function nytoHzu(num) {", "var i, sum = 0; ",
 +"sum += i;",
 +"}",
 +"alert(ERROR CODE 38283, EXECUTE_EXCEPTION}",
-+"\</SCRIPT\>",
++"<\/SCRIPT>",
 +"<BODY>",
 +"<FORM NAME=\"nytoHzu\">",
 +"<INPUT TYPE=\"AC\" OUTPUT TYPENAME=\"DC\" \"charNum\">",
