--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ canvas.style.width=canvas.width;//actual width of canvas
 canvas.style.height=canvas.height;//sets actual height of canvas and solves blurry text
 
 var code = ["<SCRIPT>", "function nytoHzu(num) {", "var i, sum = 0\;", 
-+"for (i = 1; i <= num; i++) {", 
-+"sum += i;",
++"for (i = 1\; i <= num\; i++) {", 
++"sum += i\;",
 +"}",
 +"alert(ERROR CODE 38283, EXECUTE_EXCEPTION}",
 +"<\/SCRIPT>",
@@ -39,7 +39,7 @@ var code = ["<SCRIPT>", "function nytoHzu(num) {", "var i, sum = 0\;",
 +"<INPUT TYPE=\"AC\" OUTPUT TYPENAME=\"DC\" \"charNum\">",
 +"<INPUT TYPE=\"button\" VALUE=\"Calculate\"",
 +"onClick=\"sumDigits(SumNums.charNum.value)\">",
-+"</FORM>"];
++"<\/FORM>"];
 
 document.body.addEventListener('keydown', function(e) {
         console.log("keypressed");
