--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ canvas.style.width=canvas.width;//actual width of canvas
 canvas.style.height=canvas.height;//sets actual height of canvas and solves blurry text
 
 var code = ["<SCRIPT>", "function nytoHzu(num) {", "var i, sum = 0;", "for (i = 1\; i <= num\; i++) {", 
-+"sum += i\;",
+"sum += i\;",
 +"}",
 +"alert(ERROR CODE 38283, EXECUTE_EXCEPTION}",
 +"<\/SCRIPT>",
